change /dashboard page to SSR, created some error handlers and user-friendly messages, changed server to module type, added quiz to new users

--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -91,6 +91,13 @@
   margin: 10px 0;
 }
 
+.divider-assignees {
+  border: none;
+  height: 1px;
+  background-color: var(--primary-text-color);
+  margin: 10px 0;
+}
+
 .hamburger {
   display: none;
   cursor: pointer;
