--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -17,7 +17,7 @@ body {
   overflow: hidden;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) and (-webkit-min-device-pixel-ratio: 2) {
   body {
     font-size: 85%;
   }
