--- a/client/src/styles/sidebar.css
+++ b/client/src/styles/sidebar.css
@@ -123,7 +123,7 @@
     background-color: var(--secondary-background-color);
     z-index: 999;
     width: 280px;
-    height: 100%;
+    height: 100vh;
     transition: left 0.4s ease;
     box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.42);
   }
@@ -145,7 +145,7 @@
     background-color: var(--primary-background-color);
     z-index: 999;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     box-shadow: 2px 0 20px 0 rgba(0, 0, 0, 0.42);
     transition: right 0.4s ease;
     padding-bottom: 2rem;
