--- a/client/src/styles/task.css
+++ b/client/src/styles/task.css
@@ -55,7 +55,7 @@
 }
 
 .scroll-container {
-  height: 100%;
+  height: 90%;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -70,6 +70,7 @@
   .scroll-container-todos {
     height: 65vh;
   }
+  
 }
 
 .scroll-container::-webkit-scrollbar,
@@ -122,6 +123,10 @@ select {
   display: none;
 }
 
+.todo-content {
+  height: 120vh;
+}
+
 @media (max-width: 800px) {
   .todo-list {
     padding-top: 1.5rem;
@@ -133,7 +138,12 @@ select {
   .date-mobile {
     display: flex;
   }
+  .todo-content {
+    height: 100vh;
+  }
 }
+
+
 
 .truncated-text {
   overflow: hidden;
